--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,18 @@
 body {
     margin: 0;
 }
+
+html {
+    animation: fadeInAnimation ease 3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
