--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,10 @@ body {
     margin: 0;
 }
 
+bold {
+    font-weight: bold;
+}
+
 html {
     animation: fadeInAnimation ease 3s;
     animation-iteration-count: 1;
